# flag10

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flag.py  main.py  sub.py
.github/workflows/: cd.yaml  ci.yaml
docker/: Dockerfile  setup.sh
src/: flag.rs  main.rs  sub.rs
