[package]
name = "flag10"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scraper = { version = "0.19", default-features = false }
serde = { version = "1.0", features = ["derive"] }
simple_logger = { version = "5.0", default-features = false, features = ["colors"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
tokio = { version = "1.26", features = ["macros", "rt", "rt-multi-thread"] }

[features]
flag = []
sub = []

[profile.release]
lto = true
codegen-units = 1
